change config identifier

--- a/.github/workflows/ssh_deploy.yml
+++ b/.github/workflows/ssh_deploy.yml
@@ -11,5 +11,5 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        proxy_key: ${{ secrets.PROXY_KEY }}
+        key: ${{ secrets.PROXY_KEY }}
         script: whoami
