install make on deployment runner

--- a/.github/workflows/ssh_deploy.yml
+++ b/.github/workflows/ssh_deploy.yml
@@ -16,6 +16,8 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.PROXY_KEY }}
         script: |
+          sudo apt-update
+          sudo apt-get install build-essential
           scp -r . ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~
           cd ~
           make
