--- a/.github/workflows/ssh_deploy.yml
+++ b/.github/workflows/ssh_deploy.yml
@@ -16,8 +16,8 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.PROXY_KEY }}
         script: |
-          sudo apt-update
-          sudo apt-get install build-essential
+          sudo apt-update -y
+          sudo apt-get install build-essential -y
           scp -r . ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~
           cd ~
           make
