--- a/.github/workflows/ssh_deploy.yml
+++ b/.github/workflows/ssh_deploy.yml
@@ -15,14 +15,14 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.PROXY_KEY }}
-        # script: |
-        #   ls -lha
-        #   whoami
         script: |
-          sudo apt-get update -y
-          sudo apt-get install build-essential git -y
-          cd ~
-          git clone https://github.com/mfakhrusy/blog-from-scratch
-          cd blog-from-scratch
-          make
-          ./bin/program
+          ls -lha
+          whoami
+        # script: |
+        #   sudo apt-get update -y
+        #   sudo apt-get install build-essential git -y
+        #   cd ~
+        #   git clone https://github.com/mfakhrusy/blog-from-scratch
+        #   cd blog-from-scratch
+        #   make
+        #   ./bin/program
